# wgcf-teams

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  devnotes.md  flake.nix  guide.md  todo.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  registration.rs  wireguard_config.rs
