[package]
name = "wgcf-teams"
description = "Extract wireguard configurations from cloudflare's warp for teams"
version = "0.1.0"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

repository = "https://github.com/poscat0x04/wgcf-teams"

readme = "README.md"
license = "BSD-3"

keywords = ["wireguard", "warp", "cloudflare"]
categories = ["command-line-utilities"]

[dependencies]
wireguard-keys = "0.1"
iprange = "0.6"
ipnet = "2.7"
anyhow = "1.0"
serde_json = "1.0"
argh = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tokio]
version = "1.21"
features = ["rt-multi-thread", "macros", "time"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "gzip", "cookies"]

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]

[dependencies.serde_with]
version = "2.2"
features = ["base64"]

[[bin]]
name = "wgcf-teams"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
